# portafolio

./: .gitignore  README.md  build.sh  render.yaml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/api/fixtures/: initial_data.json
backend/portfolio/: settings.py  urls.py  wsgi.py
backend/templates/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  Navigation.tsx
frontend/src/lib/: analytics.ts  api.ts  apiClient.ts  auth.ts
frontend/src/pages/: CaseStudies.tsx  CaseStudyDetail.tsx  Contact.tsx  Dashboard.tsx  DemoLogin.tsx  Home.tsx  Lab.tsx  NotFound.tsx  ProjectDetail.tsx  Projects.tsx  Quote.tsx  Services.tsx
